# calibration

./: .gitignore  CMakeLists.txt  README.md  camera_calibration.cpp  common.h  detect_board_charuco.cpp  detect_markers.cpp  four_calibration.m  generate_c2o.cpp  hand_eye.cpp  test_hand_eye.cpp
config/: R200_raw.yml  cMo.txt  camera_calibration.xml  wMe.txt
doc/: hand_eye.md
